优化代码，抽取常量

--- a/poi_demo/src/main/resources/application.properties
+++ b/poi_demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port = 8086
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
+
+ID=7a90639969136c02
+key=9vhBmQOY4wKYSreOb9gCbYUVX5KMv0Zs
